# nbdkit

./: .gitignore  .gitlab-ci.yml  BENCHMARKING  Makefile.am  OTHER_PLUGINS  README.md  TODO  configure.ac  podwrapper.pl.in  wrapper.c
ci/: build.sh  gitlab.yml  manifest.yml  rust-builds.yml
ci/buildenv/: almalinux-8.sh  almalinux-9.sh  alpine-318.sh  alpine-319.sh  alpine-320.sh  alpine-321.sh  alpine-edge.sh  centos-stream-8.sh  centos-stream-9.sh  debian-11.sh  debian-13.sh  debian-sid.sh  fedora-38-cross-mingw32.sh  fedora-38-cross-mingw64.sh  fedora-38.sh  fedora-39.sh  fedora-40-cross-mingw32.sh  fedora-40-cross-mingw64.sh  fedora-40.sh  fedora-41-cross-mingw32.sh  fedora-41-cross-mingw64.sh  fedora-41.sh  fedora-42.sh  fedora-rawhide.sh  opensuse-leap-15.sh  opensuse-tumbleweed.sh  ubuntu-2004.sh  ubuntu-2204.sh  ubuntu-2404.sh
ci/cirrus/: build.yml  freebsd-12.vars  freebsd-13.vars  freebsd-14.vars  freebsd-current.vars  macos-12.vars  macos-14.vars
ci/containers/: almalinux-8.Dockerfile  almalinux-9.Dockerfile  alpine-318.Dockerfile  alpine-319.Dockerfile  alpine-320.Dockerfile  alpine-321.Dockerfile  alpine-edge.Dockerfile  centos-stream-8.Dockerfile  centos-stream-9.Dockerfile  debian-11.Dockerfile  debian-12.Dockerfile  debian-13.Dockerfile  debian-sid.Dockerfile  fedora-36-cross-mingw32.Dockerfile  fedora-36-cross-mingw64.Dockerfile  fedora-36.Dockerfile  fedora-38-cross-mingw32.Dockerfile  fedora-38-cross-mingw64.Dockerfile  fedora-38.Dockerfile  fedora-39.Dockerfile  fedora-40-cross-mingw32.Dockerfile  fedora-40-cross-mingw64.Dockerfile  fedora-40.Dockerfile  fedora-41-cross-mingw32.Dockerfile  fedora-41-cross-mingw64.Dockerfile  fedora-41.Dockerfile  fedora-42.Dockerfile  fedora-rawhide.Dockerfile  opensuse-leap-15.Dockerfile  opensuse-tumbleweed.Dockerfile  ubuntu-2004.Dockerfile  ubuntu-2204.Dockerfile  ubuntu-2404.Dockerfile
ci/gitlab/: build-templates.yml  builds.yml  containers.yml
common/allocators/: allocator.h  malloc.c  sparse.c  zstd.c
common/bitmap/: Makefile.am
common/include/: Makefile.am  human-size-test-cases.h  human-size.h  ispowerof2.h  once.h  test-human-size.c  test-ispowerof2.c  test-once.c
common/protocol/: Makefile.am  generate-protostrings.sh.in  nbd-protocol.h  protostrings.h  test-protostrings.c
common/utils/: Makefile.am  device-size.c  string.c  test-vector.c  utils.c  utils.h  vector.c  vector.h
contrib/: sparseloadtest.c
docs/: Makefile.am  magic-parameter.txt  nbdkit-captive.pod  nbdkit-client.pod  nbdkit-filter.pod  nbdkit-plugin.pod  nbdkit-probing.pod  nbdkit-protocol.pod  nbdkit-release-notes-1.10.pod  nbdkit-release-notes-1.14.pod  nbdkit-release-notes-1.16.pod  nbdkit-release-notes-1.20.pod  nbdkit-release-notes-1.34.pod  nbdkit-release-notes-1.36.pod  nbdkit-release-notes-1.38.pod  nbdkit-release-notes-1.40.pod  nbdkit-release-notes-1.42.pod  nbdkit-release-notes-1.44.pod  nbdkit-release-notes-1.8.pod  nbdkit-security.pod  nbdkit-service.pod  nbdkit-tls.pod  nbdkit-tracing.pod  nbdkit.pod  nbdkit_absolute_path.3  nbdkit_debug.pod  nbdkit_disconnect.3  nbdkit_error.pod  nbdkit_export_name.pod  nbdkit_is_tls.pod  nbdkit_nanosleep.pod  nbdkit_parse_bool.pod  nbdkit_parse_delay.pod  nbdkit_parse_int.pod  nbdkit_parse_probability.pod  nbdkit_parse_size.pod  nbdkit_parse_uint32_t.3  nbdkit_peer_name.pod  nbdkit_peer_tls_dn.pod  nbdkit_peer_tls_issuer_dn.3  (+10 more)
filters/blocksize/: blocksize.c
filters/blocksize-policy/: nbdkit-blocksize-policy-filter.pod  policy.c
filters/bzip2/: Makefile.am  bzip2.c  nbdkit-bzip2-filter.pod
filters/cache/: nbdkit-cache-filter.pod
filters/cacheextents/: nbdkit-cacheextents-filter.pod
filters/count/: Makefile.am  count.c  nbdkit-count-filter.pod
filters/cow/: blk.c  blk.h  cow.c  nbdkit-cow-filter.pod
filters/delay/: delay.c  nbdkit-delay-filter.pod
filters/error/: nbdkit-error-filter.pod
filters/evil/: evil.c  nbdkit-evil-filter.pod
filters/exitlast/: nbdkit-exitlast-filter.pod
filters/exitwhen/: exitwhen.c  nbdkit-exitwhen-filter.pod
filters/exportname/: nbdkit-exportname-filter.pod
filters/ext2/: ext2.c
filters/extentlist/: nbdkit-extentlist-filter.pod
filters/fua/: fua.c  nbdkit-fua-filter.pod
filters/gzip/: gzip.c  nbdkit-gzip-filter.pod
filters/indexed-gzip/: Makefile.am  handle.h  ig_handle.h  ig_zran.c  ig_zran.h  indexed_gzip.c  nbdkit-indexed-gzip-filter.pod  nbdkit_zran.c  zran.c  (+1 more)
filters/lzip/: Makefile.am  lzip.c  lzipfile.c  lzipfile.h  lzipindex.c  lzipindex.h  nbdkit-lzip-filter.pod
fuzzing/: README
include/: nbdkit-common.h  nbdkit-filter.h
plugins/rust/: CHANGELOG.md  Cargo.toml  Makefile.am  README.md  cargo-tests.sh  clippy.sh  clippy.toml  run-cargo-tests.sh  test-ramdisk.sh
plugins/rust/examples/: ramdisk.rs
plugins/rust/src/: lib.rs
plugins/rust/tests/: bare_bones.rs  full_featured.rs
plugins/rust/tests/common/: mod.rs
server/: Makefile.am  backend.c  captive.c  connections.c  crypto.c  debug.c  extents.c  filters.c  internal.h  locks.c  log-fp.c  log-stderr.c  log-syslog.c  log.c  main.c  nbdkit.syms  options.h  plugins.c  protocol-handshake-newstyle.c  protocol-handshake.c  protocol.c  public.c  quit.c  sockets.c  test-public.c  threadlocal.c  timeout.c  uri.c
tests/: Makefile.am  cc-shebang.c  cc_shebang.ml  chunked-lzip.sh  dummy-vddk.c  functions.sh.in  make-pki.sh.in  make-psk.sh  make-psk.sh.in  python-error.py  python-is-tls.py  python-password.py  python-peer.py  requires.c  requires.h  shebang.py  test-S3-unit.sh  test-S3.sh  test-ansi-c.sh  test-at-file.sh  test-bad-filter-name.sh  test-bad-plugin-name.sh  test-binary.sh  test-blkio.sh  test-block-size-constraints.sh  test-blocksize-default.sh  test-blocksize-error-policy.sh  test-blocksize-extents-overflow.sh  test-blocksize-extents.sh  test-blocksize-policy-extents.sh  test-blocksize-policy.sh  test-blocksize-sharding.sh  test-blocksize-write-disconnect.sh  test-blocksize.sh  test-bzip2.c  test-cache-block-size.sh  test-cache-max-size.sh  test-cache-on-read-caches.sh  test-cache-on-read.sh  test-cache-unaligned.sh  (+374 more)
valgrind/: lzma.suppressions
(+203 files in other folders)
