[package]
name = "nbdkit"
version = "0.3.0"
authors = ["Alan Somers <asomers@gmail.com>"]
license = "BSD-2-Clause"
edition = "2021"
readme = "README.md"
repository = "https://gitlab.com/nbdkit/nbdkit"
categories = ["api-bindings", "filesystem"]
keywords = ["network-block-device", "nbd"]
homepage = "http://libguestfs.org/"
rust-version = "1.77"
exclude = ["nbdkit-rust-plugin.*", "Makefile*", "run-cargo-tests.sh", "test-ramdisk.sh"]
description = """
Rust bindings to the NBDKit framework for creating Network Block Device servers
"""

[package.metadata.docs.rs]
features = ["nix"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bitflags = "1.3.0"
libc = "0.2.71"
nix = { version = "0.24.1", default-features = false, features = ["net", "socket"], optional=true }


[dev-dependencies]
errno = "0.2.5"
lazy_static = "1.2.0"
memoffset = "0.6.3"
mockall = "0.11.0"

[[example]]
name = "ramdisk"
crate-type = ["cdylib"]
